# coatl

./: .gitignore  ANNOUNCE.txt  CMakeLists.txt  Doxyfile_common  HOWTO.md  Makefile  Makefile.64  README.md  TODO.md  coatl.c  coatl.h  coatl.vcxproj  coatl.vcxproj.filters  coatlInternal.h  coatlJson.c  coatlNumber.c  coatlNumberInt.h  coatlParse.c  coatlParseInt.h  coatlParseTcl.c  coatlRegexp.c  coatlRegexp.h  coatlUcd.c  coatlUcd.h  coatlUcdProperties.h  coatlUnicode.c  coatlUnicode.h  conanfile.txt  covcoatl.xml  covtdd.xml
InternalDocs/: Languages.txt  Menu.txt  Topics.txt
PublicDocs/: Menu.txt  Topics.txt
include/: coatl.h  coatlJson.h  coatlMath.h  coatlNumber.h  coatlRegexp.h  coatlUcd.h  coatlUcdProperties.h  coatlUnicode.h
re/: regc_lex.c  regc_locale.c  regcomp.c  regcustom.h  rege_dfa.c  regex.h  regexec.c
src/: coatl.c  coatlInternal.h  coatlJson.c  coatlMath.c  coatlMathInt.h  coatlNumber.c  coatlNumberInt.h  coatlParse.c  coatlParseInt.h  coatlParseTcl.c  coatlRegexp.c  coatlUcd.c  coatlUnicode.c
src/re/: regc_locale.c  rege_dfa.c  regex.h  regexec.c  regguts.h
tests/: testCoatl.c  testJson.c  testNumber.c  testRegexp.c  testUnicode.c
tests/json/: README.md  main.c  testJson.cmake  test_parsing_i.cmake  test_parsing_n.cmake  test_parsing_y.cmake  test_transform.cmake  testfiles.inc
tests/tdd/: mainSuite.inc  testJson.c  testMath.c  testNumbers.c  testUnicode.c
tools/unicode/: .gitignore  HOWTO.md  coatlUcd.tcl  coatlUcd.tmpl.c  coatlUcd.tmpl.h  coatlUcdProperties.tmpl.h  coatlUcd_propertyTypes.tcl  coatlUcd_regc_locale.tcl  regc_locale.tmpl.c
